<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TextView">Login</string>
    <string name="EditText">login name</string>
    <string name="TextView2">password</string>
    <string name="Switch">What does this do?</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="LoginButton">Login</string>
    <string name="dialog_title">Finish</string>
    <string name="dialog_message">Are you sure you want to finish the activity?</string>
    <string name="ok">yes</string>
    <string name="cancel">no</string>
    <string name="Chat">Start Chat</string>
    <string name="Send">Send</string>
    <string name="ToolbarBtn">Test Toolbar</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="DialogPositive">OK</string>
    <string name="DialogNegative">Cancel</string>
    <string name="DialogTitleToolbar">Do you want to go back?</string>
    <string name="Message">New Message</string>
    <string name="ItemSnack">Change Snackbar:</string>
    <string name="WeatherBtn">Weather</string>
    <string name="City">City:</string>
    <string-array name="Cities">
        <item>Ottawa</item>
        <item>Toronto</item>
        <item>Vancouver</item>
        <item>Montreal</item>
        <item>Calgary</item>
        <item>Edmonton</item>
        <item>Waterloo</item>
        <item>Winnipeg</item>
    </string-array>

</resources>