<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_columnWeight="1"
    android:layout_gravity="fill"
    android:columnCount="2"
    android:rowCount="2">


    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="213dp"
        android:layout_height="wrap_content"

        android:text="@string/RadioButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="197dp"
        android:layout_height="wrap_content"

        android:text="@string/CheckBox" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="212dp"
        android:layout_height="wrap_content"

        android:text="@string/Switch" />

    <ImageButton
        android:id="@+id/imagebtn"
        android:layout_width="194dp"
        android:layout_height="wrap_content"

        app:srcCompat="@android:drawable/ic_menu_camera" />
</GridLayout>